interpreter/tests/test-modules/loops.enzo
//= Basic loop: 1 time
$loop-iteration: 0;
Loop, (
    "There have been <$loop-iteration> loop iterations";
    $loop-iteration + 1 :> $loop-iteration;
    end-loop;
); // prints one time

//= Basic loop: 3 times
$loop-iteration<: 0;
Loop, (
    "There have been <$loop-iteration> loop iterations";
    $loop-iteration + 1 :> $loop-iteration;

    If $loop-iteration is at least 3, (
        end-loop;
    );
); // prints 3 times

//= LOOP WITH SKIP ON CONDITION
$loop-iteration<: 0;
Loop, (
    $loop-iteration + 1 :> $loop-iteration;
    If $m is 2 or $m is 4, (
        restart-loop;
    );
    $m;
);


























//= WHILE LOOP SIMPLE
$count-while: 1;
Loop while $count-while is less than 3, (
  $count-while;
  $count-while <: $count-while + 1;
);
$count-while; // prints 3

//= WHILE LOOP NEVER ENTERED (INITIAL CONDITION FALSE)
$count-never: 5;
Loop while $count-never is less than 0, (
  "Never prints";
  $count-never <: $count-never - 1;
);

$count-never; // prints 5, unchanged

//= SIMPLE FOR LOOP
$list-for: [1,2,3];
Loop for $item in $list-for, (
  "Item: <$item>"; // prints each item
);

//= FOR LOOP WITH EMPTY LIST (NEVER ENTERED)
$empty-list-for: [];
Loop for $item in $empty-list-for, (
  "Never prints";
);

$empty-list-for; // prints []

//= ERROR: FOR LOOP WITH NON-ITERABLE
$item10: 5;
Loop for $item10 in 10, ( // error: `for` loop must be over a list
  "Won't print";
);